[sonar] SonarQube指摘事項修正（BLOCKER×2・CRITICAL×6・MAJOR全件）
- BLOCKER: DataInitializer.java ハードコードパスワードを@Valueで外部化
- CRITICAL: UserService/BookService/ReservationService の重複文字列を定数化
- CRITICAL: DataInitializer プログラミングカテゴリ文字列を定数化
- CRITICAL: LibraryApplicationTests 空メソッドに // no-op コメント追加
- MAJOR: Collectors.toList() → Stream.toList() 変換（全ファイル）
- MAJOR: AuthContext/SnackbarContext の Context value を useMemo でラップ
- MAJOR: フォームラベルと入力要素の id/htmlFor 関連付け（11件）
- MAJOR: ネストされた三項演算子を if-else に変換
- MAJOR: optional chaining (&&) を ?. に変換
- MAJOR: ConfirmDialog/Drawer の非ネイティブ要素に role/tabIndex/onKeyDown 追加

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>